# object-array

./: .gitignore  CMakeLists.txt  README.md
doc/source/: Array.rst  ArrayView.rst  DynamicArray.rst  Introduction.rst  Mixin.rst  OrderedArray.rst  Performance.rst  Placement.rst  ScatteredArray.rst  conf.py  index.rst
doc/source/_ext/: CppTransDslLexer.py
include/cub/base/: BitSet.h  DeduceOffsetType.h  IntBitSet.h  IntOptional.h  InvokeConstMethod.h  Placement.h  StructWrapper.h
include/cub/base/detail/: DeduceBitSetIntType.h  DeduceIntOptional.h  StorageTrait.h
include/l0-infra/array/: ArrayIndices.h  ArraySortObject.h  ArrayView.h  DynamicArray.h  DynamicArrayView.h  IndexedArray.h  IndexedOrderedArray.h  MemAllocArray.h  ObjectArray.h  OrderedArray.h  OrderedObjectArray.h  ScatteredArray.h  config.h
include/l0-infra/array/concept/: ArrayLike.h  ContiguousArrayLikeDataHolder.h  ContinuousArrayLikeDataHolder.h  DynamicAllocator.h  ElemVisitor.h  IndexedContainer.h  Less.h  Op.h  Pred.h  RangedArrayLike.h  ScopedArrayLike.h  SimpleArrayLike.h  SimpleFind.h  SimpleMinElem.h  SimpleMutable.h
include/l0-infra/array/detail/: ArrayComposer.h  ArrayIndices.h  ArrayOffset.h  ArrayScope.h  CRTP.h  ConceptDef.h  ContinuousArrayLike.h  ContinuousArrayMixin.h  ContinuousRangedArray.h  ContinuousReadOnlyArray.h  DynamicArrayLike.h  DynamicArrayMixins.h  GenericArrayMemAllocator.h  GenericMemAllocArray.h  IndexedArray.h  OrderedArrayIndices.h  RangedReadOnlyMixins.h  ReadOnlyArrayLike.h  ScopedArrayIndices.h  SimpleReadOnlyArrayLike.h  SimpleReadOnlyArrayLikeMixins.h
include/l0-infra/array/holder/: ArrayDataHolder.h  ArrayIndicesDataHolder.h  ArrayViewDataHolder.h  ArrayViewHolder.h  ConstArrayViewDataHolder.h  ConstArrayViewHolder.h  DynamicArrayDataHolder.h  DynamicArrayHolder.h  FilterHolder.h  FromSliceHolder.h  FromViewDataHolder.h  IndexedArrayHolder.h  IndexedOrderedArrayDataHolder.h  IndexedOrderedArrayHolder.h  IndexedViewDataHolder.h  ObjectArrayDataHolder.h  ObjectArrayHolder.h  OrderedArrayDataHolder.h  OrderedArrayHolder.h  OrderedArrayIndicesDataHolder.h  OrderedViewDataHolder.h  ProxyRangedViewDataHolder.h  ProxyScopedViewDataHolder.h  RangedViewDataHolder.h  ScatteredArrayDataHolder.h  ScatteredArrayHolder.h  ScopeViewHolder.h  ScopedIndexedViewDataHolder.h  ScopedViewDataHolder.h  SliceHolder.h  SortObjectDataHolder.h  SortViewDataHolder.h  SortViewHolder.h  UntilSliceHolder.h  UntilViewDataHolder.h
include/l0-infra/array/iterator/: EmptyIterator.h  EnumIterator.h  IndexBasedIterator.h  IndexedIterator.h  IndexedScopedIterator.h  IndicesRandomIterator.h  (+8 more)
include/l0-infra/base/: BitSet.h  DeduceSizeType.h  FastBitSet.h  IntBitSet.h  IntOpt.h  InvokeConstMethod.h  Placement.h  SizeOfArray.h
include/l0-infra/object-array/: ArrayView.h  ObjectArray.h  ScatteredArray.h
include/object-array/: ArrayOffset.h  ArrayView.h  ObjectArray.h  ScatteredArray.h
include/object-array/concept/: ArrayLike.h  ContinuousArrayLikeDataHolder.h  ElemVisitor.h  IndexedContainer.h  Less.h  Op.h  Pred.h  RangedArrayLike.h  ScopedArrayLike.h  SimpleArrayLike.h  SimpleFind.h  SimpleMinElem.h  SimpleMutable.h
include/object-array/detail/: ArrayComposer.h  ArrayScope.h  ContinousReadOnlyArray.h  ContinuousArrayLike.h  ContinuousArrayMixin.h  ContinuousReadOnlyArray.h  CrtpHelper.h  MixinDef.h  RangedReadOnlyMixins.h  ReadOnlyArrayLike.h
include/object-array/holder/: ArrayDataHolder.h  ArrayViewDataHolder.h  ConstArrayViewDataHolder.h  IndexedViewDataHolder.h  ObjectArrayDataHolder.h  ObjectArrayHolder.h  RangedViewDataHolder.h  ScatteredArrayDataHolder.h  ScatteredArrayHolder.h  ScopedViewDataHolder.h
include/object-array/iterator/: EmptyIterator.h  IndexedIterator.h  IndexedScopedIterator.h  Iterator.h  ScopedIterator.h
include/object-array/mixin/: ArrayElemVisit.h  ByIndexAccessor.h  ContinousArrayEquality.h  ContinuousArrayLike.h  FullScopedElemCount.h  IndexedContainer.h  IndexedRefAccessor.h  IndexedScopedViewFactory.h  IndexedViewFactory.h  IterableArrayLike.h  IterableIndexedArrayLike.h  IterableIndexedScopedArrayLike.h  IterableScopedArrayLike.h  IteratableArrayLike.h  IteratableIndexedArrayLike.h  NonScopedSimpleFind.h  PredBasedMutate.h  RValueIndexedViewFactory.h  RValueRangedViewFactory.h  RangedArray.h  RangedArrayLike.h  RangedByIndexAccessor.h  RangedClear.h  RangedElemsCount.h  RangedScopedElemCount.h  RangedViewFactory.h  RvalueScopedViewFactory.h  ScopedByIndexAccessor.h  ScopedCleanUp.h  ScopedElemCount.h  ScopedFind.h  ScopedFindExt.h  ScopedForEach.h  ScopedForEachExt.h  ScopedMinElem.h  ScopedMinElemExt.h  ScopedRangedArray.h  ScopedRangedArrayLike.h  ScopedSimpleFind.h  ScopedSimpleForEach.h  (+10 more)
include/object-array/view/: Example.h  IndexedScopedView.h  IndexedView.h  Scope.h  ScopedView.h  Slice.h
test/it/: ObjectArrayTest-it.cpp  SliceTest-it.cpp  main.cpp
test/ut/: ArrayHolderTest.cpp  ArraySortViewTest.cpp  ArrayViewTest.cpp  DynamicArrayTest.cpp  Foo.h  IndexedArrayTest.cpp  IndexedOrderedArrayHolderTest.cpp  IndexedOrderedArrayTest.cpp  IndicesRandomIteratorTest.cpp  IntOptionalTest.cpp  ObjectArrayDataHolderTest.cpp  ObjectArrayHolderTest.cpp  ObjectArraySliceTest.cpp  ObjectArrayTest.cpp  OrderedArrayTest.cpp  OrderedObjectArrayTest.cpp  ScatteredArrayDataHolderTest.cpp  ScatteredArrayHolderTest.cpp  ScatteredArrayTest.cpp  ScopeViewTest.cpp  ScopedSimpleFindTest.cpp  SimpleFindExtTest.cpp  SliceTest.cpp  SortViewTest.cpp  TestFastBitSet.cpp  UnscopedSimpleFindTest.cpp
test/ut/array/: ArrayIndicesTest.cpp  ArraySortObjectTest.cpp  ArrayViewTest.cpp  DynamicArrayTest.cpp  DynamicArrayViewTest.cpp  GlobalMemAllocArrayTest.cpp  IndexedOrderedArrayTest.cpp  IndicesRandomIteratorTest.cpp  ObjectArrayDataHolderTest.cpp  ObjectArrayTest.cpp  OrderedArrayTest.cpp  OrderedObjectArrayTest.cpp  ScatteredArrayDataHolderTest.cpp  ScatteredArrayTest.cpp  ScopedSimpleFindTest.cpp  SliceTest.cpp  UnscopedSimpleFindTest.cpp  ViewElemTraitTest.cpp
test/ut/base/: BitSetTest.cpp  DeduceSizeType.cpp  IntBitSetTest.cpp  IntOptionalTest.cpp  PlacementTest.cpp
(+523 files in other folders)
